# boot

./: .gitignore  bare.ini  bochsrc.bxrc  boot.c  bp.h  linker.ld  meson.build  part.c  part.h  pmem.c  pmem.h  stdint.h  x86_64.ini
bios/: README  bootsec.S  bootsec.drive.S  bootsec.info.S  call.h  info.h  linker.h  linker.sc  meson.build  quirks.c  stage1.S  stage1.bioscall.S
biosdrv/: biosdrv.c  biosdrv.h  disk.c  disk.h  meson.build  mmap.c  mmap.h
boot/: bootsec.S  bootsec.drive.S  bootsec.info.S  bootsec.log.S  meson.build  stage1.S  stage1.c
bootstrap/: README  bootsec.S  bootsec.a20.S  bootsec.drive.S  bootsec.info.S  meson.build  stage1.bioscall.S  stage1.gdt.S
bs/: README  bs.c  bs.h  errors.h  map.c  map.h  meson.build
elf/: README  elf.c  elf.h  errors.h  meson.build
fmt/: README  fmt.c  fmt.h  meson.build
ini/: README  errors.h  ini.c  ini.h  meson.build
io/: README  errors.h  file.h  io.c  io.h  meson.build
kernel/: bp.h  kernel.c  linker.sc  meson.build
mem/: README  allocator.c  allocator.h  framer.c  framer.h  mem.c  mem.h  meson.build  mmap.c  mmap.h  test.c
part/: file.c  file.h  mbr.c  mbr.h  meson.build
rt/: README  man.c  man.h  meson.build  stdarg.h  stddef.h  stdint.h
scripts/: README  meson.build  mkboot.c
std/: README  assert.h  man.c  man.h  meson.build
stddef/: README  assert.h  meson.build  stdint.h
str/: README  conv.c  conv.h  meson.build  str.c  str.h
sys/: README  meson.build  sys.c  sys.h
text/: README  meson.build  text.c  text.h
vmap/: README  errors.h  meson.build  vmap.c  vmap.h
